Disabled visited link

--- a/src/components/Registration/Registration.module.css
+++ b/src/components/Registration/Registration.module.css
@@ -19,4 +19,14 @@
 
 .Button {
     margin-top: 16px !important;
+    margin-bottom: 8px !important;
+}
+
+.Link {
+    text-decoration: none;
+    text-underline: none;
+}
+
+.Link:visited {
+    color: inherit;
 }
